Move fontconfig ttf-dejavu  to seperate line

--- a/gradle-4.6/Dockerfile
+++ b/gradle-4.6/Dockerfile
@@ -6,7 +6,11 @@ USER root
 RUN apk add --no-cache dumb-init git xvfb \
     sudo openssh-client ca-certificates tar gzip parallel \
     net-tools netcat-openbsd unzip zip bzip2 gnupg curl wget \
-    shadow bash gawk sed grep bc coreutils fontconfig ttf-dejavu
+    shadow bash gawk sed grep bc coreutils
+
+
+#add fontconfig and ttf-dejavu, without this, jasper reports fails, see https://github.com/docker-library/openjdk/issues/73
+RUN apk add --no-cache fontconfig ttf-dejavu    
 
 # Use unicode
 # RUN locale-gen C.UTF-8 || true
