put jfrog in the docker image

--- a/alpine-java/grails-2.5.6/Dockerfile
+++ b/alpine-java/grails-2.5.6/Dockerfile
@@ -33,4 +33,8 @@ RUN grails create-app foo \
 	&& cd .. \
 	&& rm -rf foo
 
+WORKDIR /opt/jfrog
+RUN curl -fL https://getcli.jfrog.io | sh
+ENV PATH="/opt/jfrog:$PATH"
+
 WORKDIR /project
